--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-calendar-scheduler": "^1.0.6",
     "animate.css": "^3.6.1",
+    "angular-calendar": "^0.26.0",
+    "angular-draggable-droppable": "^4.0.1",
+    "angular-resizable-element": "^3.2.2",
     "bootstrap": "^4.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
     "jquery": "^3.3.1",
     "moment": "^2.23.0",
     "ngx-bootstrap": "^3.0.1",
