--- a/package.json
+++ b/package.json
@@ -1,65 +1,64 @@
 {
-  "name": "scheduling-app",
-  "version": "1.0.0",
+  "name": "cup-cake",
+  "version": "0.0.0",
+  "license": "MIT",
+  "sasslintConfig": ".sasslintrc",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
+    "start": "npm run lint && ng build --watch",
     "build": "ng build",
-    "build-prod": "ng build --stats-json --configuration=production --prod",
     "test": "ng test",
     "sass-lint": "sass-lint -v",
-    "html-lint": "htmllint src/app/**/*.html",
-    "lint": "npm run sass-lint && npm run html-lint && ng lint",
-    "bundle-report": "npx webpack-bundle-analyzer www/stats.json",
+    "html-lint": "htmllint $(find './src/app' -name '*.html')",
+    "lint": "npm run sass-lint && ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.3",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
-    "angular-calendar-scheduler": "^1.0.6",
-    "animate.css": "^3.6.1",
-    "angular-calendar": "^0.26.0",
-    "angular-draggable-droppable": "^4.0.1",
-    "angular-resizable-element": "^3.2.2",
-    "bootstrap": "^4.1.1",
-    "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.4",
-    "date-fns": "^1.30.1",
-    "jquery": "^3.3.1",
-    "moment": "^2.23.0",
-    "ngx-bootstrap": "^3.0.1",
-    "rxjs": "^6.0.0",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
+    "angular-calendar": "^0.23.1",
+    "bootstrap": "^4.0.0-beta.2",
+    "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.19.3",
+    "ngx-bootstrap": "^2.0.0-rc.0",
+    "ngx-contextmenu": "^4.1.1",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "~7.0.5",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.2.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.9.0",
-    "typescript": "~3.1.3",
-    "webpack-bundle-analyzer": "^3.0.1"
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2",
+    "htmllint": "^0.6.0",
+    "htmllint-cli": "0.0.6",
+    "sass-lint": "^1.12.1"
   }
 }
